--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,61 @@
+html {
+    height: 100%;
+}
+
 body {
+  margin: 0px;
+  min-height: 100%;
+  width: 100%;
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #000099;
+  font-family: 'Oswald', sans-serif;
+  border-style: solid;
+  border-width: 10px;
+  border-color: #000099;
+}
+
+.btn-primary {
+	background-color: #000099;
 }
 
 a {
   color: #00B7FF;
 }
 
-h1 {
-	color: blue;
+h3, h2 {
+	color: #000099;
 }
 
-#DAP {
-	margin-bottom: 10px;
+p {
+	color: #000099;
+}
+
+#title {
+	font-weight: bold;
+	color: #000099;
+	text-align:center;
+}
+
+#instructions, #submission-text, #api {
+	text-align:center;
+	color: #000099;
+}
+
+#submission-text {
+	margin-right: 10px;
+}
+
+#data {
+	display: flex; 
+}
+
+#dap {
+	/*margin-top: 20px;*/
+	margin-bottom: 20px;
+	text-align:center;
+}
+
+#ua {
+	/*margin-top: 40px;*/
+	text-align:center;
 }
