--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,12 @@ doctype html
 html
   head
     title Google Analytics Auditor
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+    link(href='https://fonts.googleapis.com/css?family=Oswald')
+    link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
   p
-  script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
   script(src='/js/style.js')
+  
