Updating some of the styling for the data divs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,15 +47,18 @@ p {
 
 #data {
 	display: flex; 
+	width: auto;
 }
 
 #dap {
 	/*margin-top: 20px;*/
 	margin-bottom: 20px;
 	text-align:center;
+	padding: 40px;
 }
 
 #ua {
 	/*margin-top: 40px;*/
 	text-align:center;
+	padding: 40px;
 }
